Removed unused comments and made minor changes to original

--- a/app/src/main/res/layout/fragment_createnewacc.xml
+++ b/app/src/main/res/layout/fragment_createnewacc.xml
@@ -12,10 +12,9 @@
         android:layout_height="190dp"
         android:background="@color/very_light_blue"
         android:fontFamily="@font/judsonitalic"
-        android:gravity="bottom"
+        android:gravity="bottom|center_horizontal"
         android:paddingBottom="20dp"
         android:text="EcoHelper"
-        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textDirection="inherit"
