--- a/app/src/main/res/layout/fragment_profile_enhanced_survey_question.xml
+++ b/app/src/main/res/layout/fragment_profile_enhanced_survey_question.xml
@@ -118,7 +118,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <ImageView
-        android:id="@+id/IVBackToQuiz"
+        android:id="@+id/IVBackToSurvey"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="24dp"
