--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,19 +19,19 @@
             android:layout_height="221dp">
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/IVUpperBackground"
                 android:layout_width="418dp"
                 android:layout_height="235dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-                app:layout_constraintEnd_toEndOf="@+id/imageView3"
+                app:layout_constraintBottom_toBottomOf="@+id/IVUpperDesign"
+                app:layout_constraintEnd_toEndOf="@+id/IVUpperDesign"
                 app:layout_constraintHorizontal_bias="0.097"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView3"
+                app:layout_constraintTop_toTopOf="@+id/IVUpperDesign"
                 app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/top_background_gradient" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/IVUpperDesign"
                 android:layout_width="424dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="4dp"
@@ -43,21 +43,21 @@
                 app:srcCompat="@drawable/top_background" />
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/CIVUser"
                 android:layout_width="71dp"
                 android:layout_height="68dp"
                 android:layout_marginEnd="32dp"
                 android:src="@drawable/default_profile_img"
                 app:civ_border_color="@color/white"
                 app:civ_border_width="1dp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
+                app:layout_constraintBottom_toBottomOf="@+id/IVUpperBackground"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView5"
+                app:layout_constraintTop_toTopOf="@+id/IVUpperBackground"
                 app:layout_constraintVertical_bias="0.407"
                 app:srcCompat="@drawable/default_profile_img" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/TVHello"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
@@ -67,10 +67,10 @@
                 android:textSize="23sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView5" />
+                app:layout_constraintTop_toTopOf="@+id/IVUpperBackground" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/TVUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="108dp"
@@ -79,7 +79,7 @@
                 android:textColor="#ffffff"
                 android:textSize="23sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/imageView5"
+                app:layout_constraintStart_toStartOf="@+id/IVUpperBackground"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
