--- a/app/src/main/res/layout/news_recycler_row.xml
+++ b/app/src/main/res/layout/news_recycler_row.xml
@@ -34,7 +34,7 @@
                 android:maxLines="3"
                 tools:Text ="This is the title"
                 android:layout_marginBottom ="8dp"
-                android:id ="@+id/organiation_name"/>
+                android:id ="@+id/title"/>
 
             <TextView
                 android:layout_width="wrap_content"
